# RISC-V-fsim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  decoder.cpp  decoder.h  inst.h
sim/: common.h  decoder.cpp  decoder.h  elf_reader.cpp  elf_reader.h  exec_inst.cpp  exec_inst.h  ir.cpp  ir.h  isa_desc.cpp  isa_desc.h  jit.cpp  jit.h  main.cpp  mmu.h  options.cpp  options.h  options_list.h  sim.cpp  sim.h  syscall.cpp  syscall.h  translate_inst.cpp  translate_inst.h
tests/: dec.cpp  gen.cpp
tests/addr_mapping/: a.out
tests/bubble_sort/: main.c
tests/bubble_sort/O0/: a.out  main.s
tests/bubble_sort/O2/: a.out  main.s
tests/dhrystone/: dhrystone  dhrystone.s
tests/func_call/: a.out  main.c  main.s
tests/hello_world/: hello  hello.s
tests/only_ret/: a.out  main.s
tests/recursive_fact/: main.c
tests/recursive_fact/O0/: a.out  main.s
tests/recursive_fact/O2/: a.out  main.s
tests/sum/: a.out  main.c  main.s
